--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-hubspot-form": "^1.3.7",
     "react-scripts": "3.4.0",
     "react-scroll": "^1.7.16"
   },
